# roboy_control_center

./: CMakeLists.txt  README.md  mock_motor_data.py  plugin.xml
include/roboy_control_center/: icebus.hpp  roboy_control_center.hpp
src/: body_part.ui  icebus.cpp  icebus.ui  motor.ui  roboy_control_center.cpp  roboy_control_center.ui
